[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Ricasso-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.72549, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flip_color"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 0.72549, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.72549, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "flip_color_2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.72549, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="title_screen" type="Node2D"]
script = ExtResource( 1 )

[node name="start_key_label" type="Label" parent="."]
margin_left = 228.0
margin_top = 233.0
margin_right = 414.0
margin_bottom = 257.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Hit X To Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls_label" type="Label" parent="."]
margin_left = 173.0
margin_top = 345.0
margin_right = 415.0
margin_bottom = 369.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Hit C for controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_1" type="Label" parent="."]
modulate = Color( 1, 0.72549, 0, 1 )
margin_left = 146.0
margin_top = 113.0
margin_right = 324.0
margin_bottom = 137.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = "ORTHAGALIOUS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="title_1"]
anims/RESET = SubResource( 2 )
anims/flip_color = SubResource( 3 )

[node name="title_2" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 151.0
margin_top = 108.0
margin_right = 329.0
margin_bottom = 132.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = "ORTHAGALIOUS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="title_2"]
anims/RESET = SubResource( 4 )
anims/flip_color_2 = SubResource( 5 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="Credit" type="Label" parent="."]
margin_left = 519.0
margin_top = 460.0
margin_right = 749.0
margin_bottom = 511.0
custom_fonts/font = SubResource( 8 )
text = "Ricasso font by 
Daniel Pimley"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_label" type="Label" parent="."]
margin_left = 185.0
margin_top = 291.0
margin_right = 443.0
margin_bottom = 315.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Hit z for options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fade_rect" type="ColorRect" parent="CanvasLayer"]
margin_left = -21.0
margin_top = -11.0
margin_right = 834.0
margin_bottom = 630.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/fade_rect"]
anims/RESET = SubResource( 6 )
anims/fade = SubResource( 7 )
anims/fade_in = SubResource( 9 )

[connection signal="animation_finished" from="title_1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="title_2/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/fade_rect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
